<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ResultFragment"
    android:gravity="center">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:gravity="center"
        android:id="@+id/halo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/hello_blank_fragment" />
    <TextView
        android:gravity="center"
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/status" />
    <Button
        android:id="@+id/btn_nested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_nested_nav"/>

</LinearLayout>